Creation de la servlet de base de données

--- a/tomcat8/webapps/tp2/test.html
+++ b/tomcat8/webapps/tp2/test.html
@@ -23,10 +23,10 @@ que l'appel de la Servlet vers page html
 
 
 <ul>
-<li> Appel relatif : <a href=firstServlet>firstServlet</a> <p>
+<li> Appel relatif : <a href=servdb>firstServlet</a> <p>
 
 <li> Appel absolu : <a
-href=http://localhost:8080/tp2/firstServlet>http://localhost:8080/tp2/firstServlet</a>
+href=http://localhost:8080/tp2/servdb>http://localhost:8080/tp2/servdb</a>
 </ul>
 
 </BODY>
